--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
 
     <string name="action_settings">Settings</string>
     <string name="hint">search</string>
+    <string name="searching">Search</string>
 </resources>
